--- a/src/app/aboutsite/aboutsite.component.html
+++ b/src/app/aboutsite/aboutsite.component.html
@@ -1,9 +1,9 @@
-<div class="ds-site-description-section">
+<div class="ds-about-section">
     <div class="container">
         <section>
-            <h2 class="ds-site-description-heading">About this site</h2>
-            <p>This simple site can be created with simple HTML and CSS, but we dared to create it using the MEAN stack.
-            These codes can be found on <a href="https://github.com/Tak-Kushiyama" target="_blank">Github</a>.</p>
+            <h2 class="ds-heading">About this site</h2>
+            <p>This simple site can be created with simple HTML and CSS, but we dared to create it using the MEAN stack.<br>
+            These codes can be found on <a href="https://github.com/Tak-Kushiyama/MyProfile" target="_blank">Github</a>.</p>
         </section>
     </div>
 </div>
