--- a/src/app/aboutsite/aboutsite.component.scss
+++ b/src/app/aboutsite/aboutsite.component.scss
@@ -1,2 +1,1 @@
-.ds-site-description-section{ padding-top: 60px; padding-bottom: 120px; }
-.ds-site-description-heading{ display: inline-block; font-weight: 700; color: #000; text-transform: uppercase; letter-spacing: 1px; font-size: 16px; border-bottom: 3px solid #F26464; padding-bottom: 7px; margin-bottom: 23px; }
+@import '../about/about.component';
