--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,3 +1,5 @@
+@import '../shared/shared';
+
 .ds-banner section{ margin-top: 100px; padding-left: 70px; padding-right: 100px; }
 .ds-banner section h1 span{ display: block; text-transform: uppercase; letter-spacing: 1px;  font-weight: 500; font-size: 16px; padding-bottom: 30px; }
 .ds-banner section h1{ font-weight: 600; font-size: 48px; line-height: 60px; color: #000; }
