--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,3 +1,5 @@
+@import '../shared/shared';
+
 .ds-experience-section{ padding-bottom: 120px; }
 .ds-experience-list section{ padding-right: 70px; }
 .ds-experience-list{ padding-top: 15px; }
