--- a/src/app/works/works.component.scss
+++ b/src/app/works/works.component.scss
@@ -1,3 +1,5 @@
+@import '../shared/shared';
+
 .ds-work-section{ padding-bottom: 80px; }
 .ds-work-list{ padding-left: 70px; padding-top:40px; padding-right: 70px; background-color:#F6F8FA; margin-bottom: 40px; }
 .ds-work-list section{ padding-top: 20px; padding-right: 120px; }
