--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../shared/shared';
+
 .ds-footer{ background-color: #000; padding: 120px 0; }
 .ds-footer section { padding-bottom: 97px; }
 .ds-footer section span{ color: rgba(255,255,255,0.5); text-transform: uppercase; font-weight: 700; font-size: 16px; letter-spacing: 1px; display: block; padding-bottom: 20px; }
