--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -4,29 +4,13 @@
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Core Skills</h2>
             <ul class="ds-skills-list">
-                <li>C</li>
-                <li>C#</li>
-                <li>JavaScript</li>
-                <li>Database / SQL</li>
-                <li>HTML / CSS</li>
-                <li>Angular</li>
-                <li>Node.js</li>
-                <li>ASP.NET CORE</li>
-                <li>Git</li>
-                <li>Docker</li>
-                <li>TCP / UDP</li>
-                <li>HTTP</li>
-                <li>Modbus RTU/TCP</li>
-                <li>Canbus</li>
+                <li *ngFor="let coreSkill of coreSkills">{{ coreSkill.skillName }}</li>
             </ul>
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Other Skills</h2>
             <ul class="ds-skills-list">
-                <li>Windows Embedded</li>
-                <li>Linux</li>
-                <li>ITron</li>
-                <li>Standard of Marine</li>
+                <li *ngFor="let otherSkill of otherSkills">{{ otherSkill.skillName }}</li>
             </ul>
         </div>
         </div>
