--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -10,7 +10,7 @@
           <section>
               <h1>
                 <span>HI,</span>
-                I’m Takuya Kushiyama <br> SOFTWARE DEVELOPER based in Japan.
+                I’m Takuya Kushiyama <br> SOFTWARE ENGINEER based in Japan.
               </h1>
           </section>
         </div>
