Modified sentense and style of About me

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,16 @@
     <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I studied information engineering at university and then worked for long times in software development for marine systems.</p>
+            <ul class="history">
+                <li class="history-date">2007</li>
+                <ul class="history-detail">
+                    <li>B.A of Information Science, Yamaguchi University</li>
+                </ul>
+                <li class="history-date">April 2008 - Present</li>
+                <ul class="history-detail">
+                    <li>Software Engineer in JRCS CO.LTD.</li>
+                </ul>
+            </ul>
         </section>
     </div>
 </div>
