--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,3 +2,17 @@
 
 .ds-about-section{ padding-top: 60px; padding-bottom: 120px; }
 .ds-about-section p{ color: #373737; font-size: 24px; line-height: 40px; font-weight: 300; margin-bottom: 60px; }
+
+
+.history-date{
+    list-style: none;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.history-detail{
+    padding-left: 20px;
+    padding-bottom: 20px;
+    list-style: none;
+}
