--- a/src/app/aboutsite/aboutsite.component.html
+++ b/src/app/aboutsite/aboutsite.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <section>
             <h2 class="ds-heading">About this site</h2>
-            <p>This simple site can be created with simple HTML and CSS, but we dared to create it using the MEAN stack.<br>
-            These codes can be found on <a href="https://github.com/Tak-Kushiyama/MyProfile" target="_blank">Github</a>.</p>
+            <p>This site is created with the MEAN stack.<br>
+            All codes can be found on <a href="https://github.com/Tak-Kushiyama/MyProfile" target="_blank">Github</a>.</p>
         </section>
     </div>
 </div>
