--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,21 +1,23 @@
-<div class="ds-experience-section">
-    <div class="container">
-        <h2 class="ds-heading">Work Experience</h2>
-        <div class="row ds-experience-list">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6" *ngFor="let experience of experiences">
-                <section>
-                <span class="ds-year">{{ experience.date }}</span>
-                <h3 class="ds-officename">{{ experience.companyName }}</h3>
-                <span class="ds-department">{{ experience.role }}</span>
-                <p>{{ experience.description }}</p>
-                <ul>
-                    <li>{{ experience.workDetail1 }}</li>
-                    <li>{{ experience.workDetail2 }}</li>
-                    <li>{{ experience.workDetail3 }}</li>
-                    <li>{{ experience.workDetail4 }}</li>
-                    <li>{{ experience.workDetail5 }}</li>
-                </ul>
-                </section>
-            </div>
+<div *ngIf="experiences">
+    <div class="ds-experience-section">
+        <div class="container">
+            <h2 class="ds-heading">Work Experience</h2>
+            <div class="row ds-experience-list">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6" *ngFor="let experience of experiences">
+                    <section>
+                    <span class="ds-year">{{ experience.date }}</span>
+                    <h3 class="ds-officename">{{ experience.companyName }}</h3>
+                    <span class="ds-department">{{ experience.role }}</span>
+                    <p>{{ experience.description }}</p>
+                    <ul>
+                        <li>{{ experience.workDetail1 }}</li>
+                        <li>{{ experience.workDetail2 }}</li>
+                        <li>{{ experience.workDetail3 }}</li>
+                        <li>{{ experience.workDetail4 }}</li>
+                        <li>{{ experience.workDetail5 }}</li>
+                    </ul>
+                    </section>
+                </div>
+        </div>
     </div>
 </div>
